--- a/resources/scss/_sidebar.scss
+++ b/resources/scss/_sidebar.scss
@@ -1,17 +1,37 @@
 #sidebar{
-	background: lightgray;
+	min-height: calc(100vh - 52px);
+	background: #222;
+	padding: 0;
 
-	padding-left: 0;
-	padding-right: 0;
+	#accordion{
+		.card{
+			.card-header{
+				h5{
+					margin: 0;
+					a{
+						display: block;
+						padding: 15px;
 
-	.card{
-		.card-header{
-			padding: 0;
-			h5{
-				a{
-					display: block;
-					padding: 15px;
+						color: $flat-gray-4;
+
+						&:hover{
+							background: black;
+							text-decoration: none;
+							color: white;
+						}
+					}
+					a[aria-expanded="true"]{
+						background: black;
+						text-decoration: none;
+						color: white;
+						border-bottom: solid 1px #222;
+					}
 				}
+			}
+			.card-block{
+				padding: 15px;
+				color: white;
+				background: lighten(black, 10%);
 			}
 		}
 	}
